--- a/english-language/index.html
+++ b/english-language/index.html
@@ -196,9 +196,7 @@
 
     <div class="courses">
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/stQWQSgpZiS0JqF9wtl5irhvA3RDO6edNAPNRSti.png"
-        />
+        <img src="../assets/english-language/paper-1.png" />
         <h2>Language Paper 1</h2>
         <p>
           Excel in Language Paper 1: pre-exam creative writing hacks, question
@@ -208,9 +206,7 @@
         </a>
       </div>
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/VIwn7RyNdb8wYWgKZdjDFdHES5sBOSI6CqMzBmjU.png"
-        />
+        <img src="../assets/english-language/paper-2.png" />
         <h2>Language Paper 2</h2>
         <p>
           Ace Language Paper 2: how to write exceptional letters, speeches,
