--- a/english-literature/gcse-texts/a-christmas-carol/index.html
+++ b/english-literature/gcse-texts/a-christmas-carol/index.html
@@ -791,54 +791,39 @@
         <div class="pdf-icons">
           <!-- start pdf's -->
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/stave-1-kIPb.pdf"
+            href="../../../assets/english-literature/gcse-texts/acc/stave-1.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-1"
-            />
-            <div>Act 1</div>
+            <img src="../../../assets/pdf.png" alt="PDF Act-1" />
+            <div>Stave 1</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/stave-2-JeXA.pdf"
+            href="../../../assets/english-literature/gcse-texts/acc/stave-2.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-2"
-            />
-            <div>Act 2</div>
+            <img src="../../../assets/pdf.png" alt="PDF Act-2" />
+            <div>Stave 2</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/stave-3-5Mdz.pdf"
+            href="../../../assets/english-literature/gcse-texts/acc/stave-3.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
-            <div>Act 3</div>
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
+            <div>Stave 3</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/stave-4-QmKF.pdf"
+            href="../../../assets/english-literature/gcse-texts/acc/stave-4.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
-            <div>Act 3</div>
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
+            <div>Stave 4</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/stave-5-ZmJk.pdf"
+            href="../../../assets/english-literature/gcse-texts/acc/stave-5.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
-            <div>Act 3</div>
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
+            <div>Stave 5</div>
           </a>
           <!-- end pdf's -->
         </div>
