--- a/english-literature/gcse-texts/an-inspector-calls/index.html
+++ b/english-literature/gcse-texts/an-inspector-calls/index.html
@@ -951,33 +951,24 @@
         <div class="pdf-icons">
           <!-- start pdf's -->
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-1-yM6K.pdf"
+            href="../../../assets/english-literature/gcse-texts/aic/act-1.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-1"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-1" />
             <div>Act 1</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-2-6AjN.pdf"
+            href="../../../assets/english-literature/gcse-texts/aic/act-2.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-2"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-2" />
             <div>Act 2</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-3-2jcP.pdf"
+            href="../../../assets/english-literature/gcse-texts/aic/act-3.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
             <div>Act 3</div>
           </a>
           <!-- end pdf's -->
