--- a/english-literature/gcse-texts/index.html
+++ b/english-literature/gcse-texts/index.html
@@ -197,7 +197,7 @@
     <div class="courses">
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/ZBn0VJZoOjwASyV05u9JCS4UycZOLk0i4f9eNzSJ.png"
+          src="../../assets/english-literature/gcse-texts/acc.png"
           alt="An Inspector Calls"
         />
         <h2>An Inspector Calls</h2>
@@ -208,7 +208,7 @@
       </div>
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/chOZGldj7WksUK8JwfxiOPael7HQGGb3Hv8DETpD.png"
+          src="../../assets/english-literature/gcse-texts/acc.png"
           alt="A Christmas Carol"
         />
         <h2>A Christmas Carol</h2>
@@ -219,7 +219,7 @@
       </div>
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/Hrx99iEYkJkI5qAbLopK2PUXxuFg3mW7i0UFhxfB.png"
+          src="../../assets/english-literature/gcse-texts/raj.png"
           alt="Romeo + Juliet"
         />
         <h2>Romeo + Juliet</h2>
