--- a/english-literature/gcse-texts/romeo-and-juliet/index.html
+++ b/english-literature/gcse-texts/romeo-and-juliet/index.html
@@ -804,53 +804,38 @@
         <div class="pdf-icons">
           <!-- start pdf's -->
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-1-Ch9n.pdf"
+            href="../../../assets/english-literature/gcse-texts/raj/act-1.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-1"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-1" />
             <div>Act 1</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-2-MhbM.pdf"
+            href="../../../assets/english-literature/gcse-texts/raj/act-2.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-2"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-2" />
             <div>Act 2</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-3-tuqx.pdf"
+            href="../../../assets/english-literature/gcse-texts/raj/act-3.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
             <div>Act 3</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-4-wAWm.pdf"
+            href="../../../assets/english-literature/gcse-texts/raj/act-4.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
             <div>Act 4</div>
           </a>
           <a
-            href="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/act-5-vc3M.pdf"
+            href="../../../assets/english-literature/gcse-texts/raj/act-5.pdf"
             target="_blank"
           >
-            <img
-              src="https://thelightuphub.com/assets/images/pdf.png"
-              alt="PDF Act-3"
-            />
+            <img src="../../../assets/pdf.png" alt="PDF Act-3" />
             <div>Act 5</div>
           </a>
           <!-- end pdf's -->
