--- a/english-literature/index.html
+++ b/english-literature/index.html
@@ -197,7 +197,7 @@
     <div class="courses">
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/trK1oLA1kQPiGLkgFQds9vg9Xnkha4niWCNHDQwv.png"
+          src="../assets/english-literature/gcse-texts.png"
           alt="GCSE Texts"
         />
         <h2>GCSE Texts</h2>
@@ -207,10 +207,7 @@
         </a>
       </div>
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/3OF7EBAhWn8NXRQAFfyjhuJMjtTJulxC5YQlcHhy.png"
-          alt="Poetry"
-        />
+        <img src="../assets/english-literature/poetry.png" alt="Poetry" />
         <h2>Poetry</h2>
         <p>Enhance Poetry Analysis: Boost Your Analytical...</p>
         <a href="poems/index.html">
@@ -219,8 +216,8 @@
       </div>
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/course-placeholder.png"
-          alt="Poetry"
+          src="../assets/english-literature/top-tips.png"
+          alt="Examiner Top Tips"
         />
         <h2>Examiner Top Tips</h2>
         <p>An Exclusive Course To Give You Top Tips...</p>
