--- a/english-literature/poems/index.html
+++ b/english-literature/poems/index.html
@@ -196,7 +196,7 @@
     <div class="courses">
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/nQSJa8Zm9KbU3EYAYZluMpnEYl3giDjcwh4PX3jG.png"
+          src="../../assets/english-literature/poetry/love.png"
           alt="Love + Relationship Poetry"
         />
         <h2>Love + Relationship Poetry</h2>
@@ -207,7 +207,7 @@
       </div>
       <div class="course-card">
         <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/pbJMAWIDgnQOSLP65Wvt1JJC5rHpEEZ9mhYBHSAv.png"
+          src="../../assets/english-literature/poetry/unseen.png"
           alt="Unseen Poetry"
         />
         <h2>Unseen Poetry</h2>
