--- a/index.html
+++ b/index.html
@@ -155,10 +155,7 @@
 
     <div class="courses">
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/0bWWBpVXctUu7mSqsAYVISFroFOfcHPWHiuLwEm6.png"
-          alt="English Literature"
-        />
+        <img src="assets/english_literature.png" alt="English Literature" />
         <h2>English Literature</h2>
         <p>Unveiling Core Texts and Poetry Insights for Your...</p>
         <a href="english-literature/index.html">
@@ -166,10 +163,7 @@
         </a>
       </div>
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/gvB27YO0r4krv8lOEc5cI0w3dyoCKP9dyWFUQhw9.png"
-          alt="English Language"
-        />
+        <img src="assets/english_language.png" alt="English Language" />
         <h2>English Language</h2>
         <p>Your Complete Guide To Mastering The Language...</p>
         <a href="english-language/index.html">
@@ -177,10 +171,7 @@
         </a>
       </div>
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/9AA1PZsuInsvh3QxRiGCfPdqfZW8BBNQxe3B9kHM.png"
-          alt="Essay Skills"
-        />
+        <img src="assets/essay_skills.png" alt="Essay Skills" />
         <h2>Essay Skills</h2>
         <p>Elevate All Your Essays with These Fundamental...</p>
         <a href="essay-skills/index.html">
@@ -188,10 +179,7 @@
         </a>
       </div>
       <div class="course-card">
-        <img
-          src="https://thelightuphub.s3.eu-west-2.amazonaws.com/uploads/Bwge6S6oZNT8i1IUKOEny5Vx10K7Z7zR1kFy2ZPp.png"
-          alt="Revision"
-        />
+        <img src="assets/revision.png" alt="Revision" />
         <h2>Revision</h2>
         <p>Master GCSE English: Effective Methods for...</p>
         <a href="revision/index.html">
