censor nono word

--- a/english-language/paper-two/index.html
+++ b/english-language/paper-two/index.html
@@ -1040,7 +1040,7 @@
               options: ["8", "12", "16", "20"],
               correctAnswer: "16",
               explanation:
-                "This is the second most heavily weighted question in the paper. (not a reason loool stupid lightuphub)",
+                "This is the second most heavily weighted question in the paper. (not a reason loool stupid l1ghtup hub)",
             },
             {
               question: "What does question 4 ask you to do in this question?",
