--- a/english-literature/poems/love-and-relationships/index.html
+++ b/english-literature/poems/love-and-relationships/index.html
@@ -1471,7 +1471,7 @@
               ],
               correctAnswer: "Both use pathetic fallacy in the first stanza",
               explanation:
-                "Porphyria’s Lover and Winter Swans both mention the “rain” in the opening lines of the poems. Idk why lightuphub put the (check this) mistake or intentional?",
+                "Porphyria’s Lover and Winter Swans both mention the “rain” in the opening lines of the poems. Idk why l1ghtup hub put the (check this) mistake or intentional?",
             },
             {
               question:
