--- a/english-literature/poems/unseen-poetry/index.html
+++ b/english-literature/poems/unseen-poetry/index.html
@@ -847,7 +847,7 @@
               ],
               correctAnswer:
                 "Doesn’t matter, I just need to follow the structures and do well!",
-              explanation: "what the fuck, lightuphub?",
+              explanation: "what the fuck, l1ghtup hub?",
             },
           ],
         },
