'unseen poetry' ticklist

--- a/english-literature/poems/unseen-poetry/learn-folders/24-mark-question/24_mark_overview.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/24-mark-question/24_mark_overview.html
@@ -466,7 +466,7 @@
           <div class="separator"></div>
           <h3>24 Mark Overview</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../24-mark-question/24_mark_overview.html"
                 >24 Mark Question Overview</a
               >
