--- a/english-literature/poems/unseen-poetry/learn-folders/8-mark-question/8_mark_overview.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/8-mark-question/8_mark_overview.html
@@ -475,7 +475,7 @@
           <div class="separator"></div>
           <h3>8 Mark Overview</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../8-mark-question/8_mark_overview.html"
                 >8 Mark Question Overview</a
               >
