--- a/english-literature/poems/unseen-poetry/learn-folders/grade-9-essays/how_the_poet_present_the_speakers_feelings_about_love_start_learning.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/grade-9-essays/how_the_poet_present_the_speakers_feelings_about_love_start_learning.html
@@ -493,7 +493,7 @@
           <div class="separator"></div>
           <h3>Grade 9 Essays</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../grade-9-essays/how_the_poet_present_the_speakers_feelings_about_love_start_learning.html"
                 >How the poet present the speakers feelings about love</a
