--- a/english-literature/poems/unseen-poetry/learn-folders/grade-9-essays/how_to_poet_presents_the_speakers_feelings_about_the_city_at_night.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/grade-9-essays/how_to_poet_presents_the_speakers_feelings_about_the_city_at_night.html
@@ -499,7 +499,7 @@
                 >How the poet present the speakers feelings about love</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../grade-9-essays/how_to_poet_presents_the_speakers_feelings_about_the_city_at_night.html"
                 >How to poet presents the speakers feelings about the city at
