--- a/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/plan_past_paper_question_1.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/plan_past_paper_question_1.html
@@ -435,7 +435,7 @@
                 >Write Up Full Essay 2</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../learn-unseen/plan_past_paper_question_1.html"
                 >Plan Past Paper Question 1</a
               >
