--- a/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/plan_past_paper_question_2.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/plan_past_paper_question_2.html
@@ -440,7 +440,7 @@
                 >Plan Past Paper Question 1</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../learn-unseen/plan_past_paper_question_2.html"
                 >Plan Past Paper Question 2</a
               >
