--- a/english-literature/poems/unseen-poetry/learn-folders/notes/language_technique_sheet.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/notes/language_technique_sheet.html
@@ -452,7 +452,7 @@
             <li style="margin-bottom: 10px">
               <a href="../notes/poetic_techniques.html">Poetic Techniques</a>
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../notes/language_technique_sheet.html"
                 >Language Technique Sheet</a
               >
