--- a/english-literature/poems/unseen-poetry/learn-folders/notes/poetic_techniques.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/notes/poetic_techniques.html
@@ -449,7 +449,7 @@
           <div class="separator"></div>
           <h3>Notes</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../notes/poetic_techniques.html">Poetic Techniques</a>
             </li>
             <li style="margin-bottom: 10px">
