--- a/english-literature/poems/unseen-poetry/learn-folders/notes/structure_techniques.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/notes/structure_techniques.html
@@ -457,7 +457,7 @@
                 >Language Technique Sheet</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../notes/structure_techniques.html"
                 >Structure Techniques</a
               >
