--- a/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/write_up_full_essay_1.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/write_up_full_essay_1.html
@@ -425,7 +425,7 @@
           <div class="separator"></div>
           <h3>Learn Unseen Poetry</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../learn-unseen/write_up_full_essay_1.html"
                 >Write Up Full Essay 1</a
               >
