--- a/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/write_up_full_essay_2.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/learn-unseen/write_up_full_essay_2.html
@@ -430,7 +430,7 @@
                 >Write Up Full Essay 1</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../learn-unseen/write_up_full_essay_2.html"
                 >Write Up Full Essay 2</a
               >
