'unseen poetry' videos + pdfs

--- a/english-literature/poems/unseen-poetry/learn-folders/8-mark-question/8_mark_overview.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/8-mark-question/8_mark_overview.html
@@ -512,7 +512,7 @@
           <div class="video-container">
             <iframe
               id="video-iframe"
-              src="https://www.youtube-nocookie.com/embed/"
+              src="https://www.youtube-nocookie.com/embed/Z33TPN0xeWI"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               loading="lazy"
@@ -533,11 +533,12 @@
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../unseen-pdfs/"
+              src="../../unseen-pdfs/unseen-poetry-structure-tips.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
             />
+            <!-- yes, this is the correct vid -->
             <div id="pdf-fallback" class="video-fallback" style="display: none">
               <p>
                 Mobile Device Detected:
@@ -553,7 +554,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../unseen-pdfs/";
+      const pdfUrl = "../../unseen-pdfs/unseen-poetry-structure-tips.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
