--- a/english-literature/poems/unseen-poetry/learn-folders/past-paper-questions/aqa_past_paper_questions.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/past-paper-questions/aqa_past_paper_questions.html
@@ -17,6 +17,10 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>Unseen Poetry</title>
 
     <style>
@@ -114,6 +118,14 @@
 
       h1 .back-button:hover svg {
         transform: scale(1.1);
+      }
+
+      li h1 {
+        display: inline;
+
+        font-size: 1.5em;
+
+        margin: 0;
       }
 
       .content {
@@ -509,7 +521,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               id="video-iframe"
               src="https://www.youtube-nocookie.com/embed/"
@@ -526,18 +538,42 @@
                 >
               </p>
             </div>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../unseen-pdfs/"
+              src="../../unseen-pdfs/were not allowed.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
             />
+            <ul>
+              <li>
+                <a
+                  href="https://filestore.aqa.org.uk/sample-papers-and-mark-schemes/2022/june/AQA-87022-QP-JUN22.PDF"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <h1>June 2022 Question Paper </h1>
+                  <i class="fas fa-external-link-alt external-link-icon"></i>
+                </a>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <a
+                  href="https://filestore.aqa.org.uk/sample-papers-and-mark-schemes/2021/november/AQA-87022-QP-NOV21.PDF"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <h1>November 2021 Question Paper </h1>
+                  <i class="fas fa-external-link-alt external-link-icon"></i>
+                </a>
+              </li>
+            </ul>
             <div id="pdf-fallback" class="video-fallback" style="display: none">
               <p>
                 Mobile Device Detected:
@@ -553,7 +589,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../unseen-pdfs/";
+      const pdfUrl = "../../unseen-pdfs/were not allowed.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
