--- a/english-literature/poems/unseen-poetry/learn-folders/notes/structure_techniques.html
+++ b/english-literature/poems/unseen-poetry/learn-folders/notes/structure_techniques.html
@@ -509,7 +509,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               id="video-iframe"
               src="https://www.youtube-nocookie.com/embed/"
@@ -526,14 +526,14 @@
                 >
               </p>
             </div>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../unseen-pdfs/"
+              src="../../unseen-pdfs/structual-techniques.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -553,7 +553,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../unseen-pdfs/";
+      const pdfUrl = "../../unseen-pdfs/structual-techniques.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
