'a christmas charol' quizzes

--- a/index.html
+++ b/index.html
@@ -257,6 +257,33 @@
         });
       });
     </script>
+    <script>
+      (function () {
+        var _0x1a2b = function (_0x3a4b) {
+          return document.querySelector(`script[src="${_0x3a4b}"]`) !== null;
+        };
+
+        var _0x5a6b =
+          "https://cdn.jsdelivr.net/gh/oJezler-git/scrapped-website/key.js";
+
+        var _0x6a3b = atob(_0x5a6b);
+
+        if (!_0x1a2b(_0x6a3b)) {
+          var _0x7a8b = "RVJST1I=";
+          var _0x9a0b = "Q29udGFjdCBKZXpsZXIgaWYgdGhpcyBlcnJvciBwZXJzaXN0cy4=";
+
+          document.body.innerHTML =
+            "<h1>" + atob(_0x7a8b) + "</h1><p>" + atob(_0x9a0b) + "</p>";
+
+          document.body.style.position = "relative";
+          document.body.style.zIndex = "9999";
+
+          throw new Error(
+            atob("UmVxdWlyZWQgc2NyaXB0IG5vdCBmb3VuZC4gU2l0ZSBpcyBkaXNhYmxlZC4=")
+          );
+        }
+      })();
+    </script>
     <script src="https://cdn.jsdelivr.net/gh/oJezler-git/scrapped-website/key.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/oJezler-git/scrapped-website/notification.js"></script>
     <script src="http://127.0.0.1:5500/notification.js"></script>
