--- a/english-literature/gcse-texts/an-inspector-calls/learn-folders/key-themes/responsibility_theme_table.html
+++ b/english-literature/gcse-texts/an-inspector-calls/learn-folders/key-themes/responsibility_theme_table.html
@@ -798,7 +798,15 @@
               width="100%"
               height="500px"
               type="application/pdf"
-            />
+                        <div id="pdf-fallback" class="video-fallback" style="display: none">
+              <p>
+                Mobile Device Detected:
+                <a href="" id="direct-pdf-link" target="_blank" rel="noopener"
+                  >Open PDF directly</a
+                >
+              </p>
+            </div>
+/>
           </div>
         </div>
       </div>
