--- a/english-literature/gcse-texts/romeo-and-juliet/learn-folders/essay-plans/love_and_violence_essay_plan.html
+++ b/english-literature/gcse-texts/romeo-and-juliet/learn-folders/essay-plans/love_and_violence_essay_plan.html
@@ -637,7 +637,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               src="https://www.youtube-nocookie.com/embed/"
               frameborder="0"
@@ -653,7 +653,7 @@
                 >
               </p>
             </div>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
