--- a/english-literature/gcse-texts/romeo-and-juliet/learn-folders/friar-lawrence/the_friar_theme_table.html
+++ b/english-literature/gcse-texts/romeo-and-juliet/learn-folders/friar-lawrence/the_friar_theme_table.html
@@ -672,7 +672,8 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../raj-pdfs/";
+      const pdfUrl =
+        "../../raj-pdfs/Friar lawrence/Friar Lawrence theme table.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
