Fix incorrectly linked pdf

--- a/english-literature/gcse-texts/an-inspector-calls/learn-folders/grade-9-essays/how_is_sheila_presented_as_a_character_who_changes.html
+++ b/english-literature/gcse-texts/an-inspector-calls/learn-folders/grade-9-essays/how_is_sheila_presented_as_a_character_who_changes.html
@@ -794,7 +794,7 @@
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../aic-pdfs/Grade 9 essays/How far is Eric presented as a character who changes.pdf"
+              src="../../aic-pdfs/Grade 9 essays/How is Sheila presented as a character who changes.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -815,7 +815,7 @@
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
       const pdfUrl =
-        "../../aic-pdfs/Grade 9 essays/How far is Eric presented as a character who changes.pdf";
+        "../../aic-pdfs/Grade 9 essays/How is Sheila presented as a character who changes.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
