--- a/english-literature/gcse-texts/a-christmas-carol/learn-folders/Key Themes/bob_cratchit_cratchits_key_themes.html
+++ b/english-literature/gcse-texts/a-christmas-carol/learn-folders/Key Themes/bob_cratchit_cratchits_key_themes.html
@@ -673,7 +673,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../acc-pdfs/Cratchits key themes.pdf";
+      const pdfUrl = "../../acc-pdfs/Key themes/Cratchits key themes.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
