--- a/english-literature/poems/love-and-relationships/learn-folders/before-you-were-mine/before_you_were_mine.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/before-you-were-mine/before_you_were_mine.html
@@ -668,22 +668,30 @@
           </ul>
         </div>
         <div class="main-content">
-          <!-- <div class="video-container">
+          <div class="video-container">
             <iframe
-              src="https://www.youtube-nocookie.com/embed/"
+              src="https://www.youtube-nocookie.com/embed/bK4ghhd8-m4"
               frameborder="0"
               allow="autoplay; fullscreen; picture-in-picture"
               loading="lazy"
               allowfullscreen
             ></iframe>
-          </div> -->
+            <div id="video-fallback" class="video-fallback">
+              <p>
+                Video not loading?
+                <a href="" id="direct-video-link" target="_blank" rel="noopener"
+                  >Watch directly on YouTube</a
+                >
+              </p>
+            </div>
+          </div>
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../love-and-relationships-pdfs/plan-past-paper-questions.pdf"
+              src="../../love-and-relationships-pdfs/before-you-were-mine.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -704,7 +712,7 @@
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
       const pdfUrl =
-        "../../love-and-relationships-pdfs/plan-past-paper-questions.pdf";
+        "../../love-and-relationships-pdfs/before-you-were-mine.pdf";
       const pdfEmbed = document.getElementById("pdf-embed");
       const pdfFallback = document.getElementById("pdf-fallback");
       const directPdfLink = document.getElementById("direct-pdf-link");
